mbl/src/main/grammars/mbl.bnf
/*
 * Copyright (C) 2019-2021 cofe
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

{
  classHeader="gpl.txt"

  parserClass="tk.cofe.plugin.mbl.parser.MblParser"

  implements="tk.cofe.plugin.mbl.psi.MblPsiCompositeElement"
  extends="tk.cofe.plugin.mbl.psi.impl.MblPsiCompositeElementBase"

  psiClassPrefix="Mbl"
  psiImplClassSuffix="Impl"
  psiPackage="tk.cofe.plugin.mbl.psi"
  psiImplPackage="tk.cofe.plugin.mbl.psi.impl"

  elementTypeHolderClass="tk.cofe.plugin.mbl.MblTypes"
  elementTypePrefix=""
  elementTypeClass="tk.cofe.plugin.mbl.psi.MblElementType"
  tokenTypeClass="tk.cofe.plugin.mbl.psi.MblTokenType"

  psiImplUtilClass="tk.cofe.plugin.mbl.psi.impl.MblPsiUtil"

  extends(".*(Expression|Literal)")="expression"
  pin(".*Config")=1
  tokens=[
    EXPRESSION_START="regexp:[$#]\{"
//    EXPRESSION_END="}"

    DOT="."
    COMMA=","

    LPARENTH="("
    RPARENTH=")"
    LBRACKET="["
    RBRACKET="]"
    LBRACE="{"
    RBRACE="}"

    PLUS="+"
    MINUS="-"
    MULTIPLY="*"
    DIVISION="/"
    MODULO="%"

    NEGATE="!"
    NOT_EQUAL="!="
    EQUAL="=="
    EQ="="
    LESS="<"
    LESS_EQUAL="<="
    GREATER=">"
    GREATER_EQUAL=">="

    EQ_KEYWORD="eq"
    NEQ_KEYWORD="neq"
    LT_KEYWORD="lt"
    LT_EQ_KEYWORD="lte"
    GT_KEYWORD="gt"
    GT_EQ_KEYWORD="gte"

    AND_AND="&&"
    OR_OR="||"
    AND_KEYWORD="and"
    OR_KEYWORD="or"
    NOT_KEYWORD="not"

    OR="|"
    XOR="^"
    AND="&"
    NOT="~"

    BAND_KEYWORD="band"
    BOR_KEYWORD="bor"
    XOR_KEYWORD="xor"

    NEW_KEYWORD="new"
    TRUE_KEYWORD="true"
    FALSE_KEYWORD="false"
    NULL_KEYWORD="null"

    INSTANCEOF_KEYWORD="instanceof"
    NOT_IN_KEYWORD="not in"
    IN_KEYWORD="in"

    SHIFT_LEFT="<<"
    SHIFT_RIGHT=">>"
    SHIFT_RIGHT_LOGICAL=">>>"

    SHIFT_LEFT_KEYWORD="shl"
    SHIFT_RIGHT_KEYWORD="shr"
    SHIFT_RIGHT_LOGICAL_KEYWORD="ushr"

    AT_KEYWORD="@"
    DOLLAR_KEYWORD="$"

    MODE_KEYWORD='mode'
    JAVA_TYPE_KEYWORD='javaType'
    JDBC_TYPE_KEYWORD='jdbcType'
    JDBC_TYPE_KEYWORD_NAME='jdbcTypeName'
    NUMERIC_SCALE_KEYWORD='numericScale'
    TYPE_HANDLER_KEYWORD='typeHandler'
    RESULT_MAP_KEYWORD='resultMap'

    QUESTION="?"
    COLON=":"

    WHITE_SPACE_CHAR='regexp:\p{Space}+'

    INTEGER_LITERAL="regexp:\p{Digit}*" // [0-9]
    DOUBLE_LITERAL="regexp:\p{Digit}+\.\p{Digit}+" // [0-9]+\.[0-9]+

    CHARACTER_LITERAL="regexp:'[^\r\n]*'"
    STRING_LITERAL="regexp:\"[^\r\n]*\""

    IDENTIFIER="regexp:\p{javaJavaIdentifierStart}\p{javaJavaIdentifierPart}*"
  ]
}

root ::= EXPRESSION_START rootElement RBRACE {pin=1}
private rootRecover ::= !(RBRACE)
private rootElement ::= expression paramConfigList? {
  recoverWhile="rootRecover"
}

expression ::= literalExpression |
            unaryExpression |
            parenthesizedExpression |
            variableExpression |
            conditionalExpression |
            binaryExpression |
            referenceExpression |
            methodCallExpression |
            indexedExpression
{
  methods=[
    getType
  ]
}

private numberLiteralExpression ::= INTEGER_LITERAL | DOUBLE_LITERAL
private textLiteralExpression ::= STRING_LITERAL | CHARACTER_LITERAL
private booleanLiteralExpression ::= TRUE_KEYWORD | FALSE_KEYWORD
literalExpression ::= numberLiteralExpression |
                      textLiteralExpression |
                      booleanLiteralExpression |
                      NULL_KEYWORD {
  methods=[
    getConstantValue
  ]
}

private bitwiseOperations ::= '!' | '~'
private unaryOperator ::= bitwiseOperations |
                          '+' | '-' | 'not'
unaryExpression ::= unaryOperator expression {
  pin=1
  methods=[
    getUnaryOperator
  ]
}

parenthesizedExpression ::= LPARENTH expression RPARENTH { pin=1 }

variableExpression ::= '#' IDENTIFIER {
  mixin="tk.cofe.plugin.mbl.psi.impl.MblVariableExpressionBase"
}

projectionExpression ::= '{' expression '}'
{
  methods=[
    projectionExpression="expression"
  ]
}
selectionExpression ::= '{' ('?' | '^' | '$') expression '}'
{
  methods=[
    selectorExpression="expression"
  ]
}

private referenceRecover ::= !('}' | ',' | '(' | ')' | binaryOperations)
referenceExpression ::= (variableExpression | ['@'] IDENTIFIER)
                        ('.' IDENTIFIER)* ('@' IDENTIFIER)?
                        ('.' selectionExpression)?
                        ('.' projectionExpression)?
{
  mixin="tk.cofe.plugin.mbl.psi.impl.MblReferenceExpressionBase"
  methods=[getReferences]
  recoverWhile="referenceRecover"
}

private conditionalExpressionTail ::= ':' expression {pin=1}
conditionalExpression ::= expression '?' expression conditionalExpressionTail {
  methods=[
    expression=""
    condition="expression[0]"
    then="expression[1]"
    else="expression[2]"
  ]
}

// binary ----------------------------------------------------------------
private plusMinusOperations ::= '+' | '-'
private divideMultiplyOperations ::=  '*' | '/' | '%'
private booleanOperations ::= "&&" | "||" |
                              "and" | "or" |
                              "not"
private bitwiseBooleanOperations ::=  "|" | "^" | "&" | "band" | "bor" | "xor"
private equalityOperations ::= "==" | "!=" |
                               "eq" | "neq"
private relationalOperations ::= '<'  | "<="  | '>'  | ">=" |
                                 "lt" | "lte" | "gt" | "gte"
private shiftOperations ::= "<<" | ">>" | ">>>" |
                            "shl" | "shr" | "ushr"
private instanceOfOperation ::= "instanceof"
private setOperations ::= "not in" | "in"
private binaryOperations ::=
                           plusMinusOperations |
                           divideMultiplyOperations |
                           bitwiseBooleanOperations |
                           instanceOfOperation |
                           shiftOperations |
                           booleanOperations |
                           equalityOperations |
                           relationalOperations |
                           setOperations
                           { name="operator" }
binaryExpression ::= expression binaryOperations expression {
  methods=[
    expression=""
    left="expression[0]"
    right="expression[1]"
    getOperator
  ]
}

private parameterRecover ::= !(')')
parameterList ::= expression? (',' expression)* {
  methods=[
    parametersList="expression"
    getParameterCount
  ]
  recoverWhile="parameterRecover"
}

methodCallExpression ::= referenceExpression '(' parameterList ')' {
  methods=[
    method="expression"
  ]
  pin(".*")="'\('"
}

indexedExpression ::= (referenceExpression | variableExpression) '[' expression ']'
                      ('.' IDENTIFIER)*
                      ('.'  selectionExpression | projectionExpression)? {
  methods=[
    expression=""
    referenceQualifier="expression[0]"
    indexExpression="expression[1]"
  ]
  pin=2
}

//https://mybatis.org/mybatis-3/sqlmap-xml.html#Parameters
private classNameExpression ::= IDENTIFIER ('.' IDENTIFIER)*
modeConfig ::= 'mode' '=' IDENTIFIER
javaTypeConfig ::= 'javaType' '=' classNameExpression
jdbcTypeConfig ::= 'jdbcType' '=' IDENTIFIER
jdbcTypeNameConfig ::= 'jdbcTypeName' '=' IDENTIFIER
numericScaleConfig ::= 'numericScale' '=' INTEGER_LITERAL
typeHandlerConfig ::= 'typeHandler' '=' classNameExpression
resultMapConfig ::= 'resultMap' '=' IDENTIFIER
private configRecover ::= !('}' | ',')
private paramConfig ::= ',' (modeConfig | javaTypeConfig | jdbcTypeConfig | jdbcTypeNameConfig | numericScaleConfig | typeHandlerConfig | resultMapConfig){
  recoverWhile = "configRecover"
}
paramConfigList ::= paramConfig+
