mbl/src/main/gen/tk/cofe/plugin/mbl/parser/MblParser.java
/*
 * Copyright (C) 2019-2021 cofe
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */
package tk.cofe.plugin.mbl.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static tk.cofe.plugin.mbl.MblTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class MblParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return root(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(BINARY_EXPRESSION, CONDITIONAL_EXPRESSION, EXPRESSION, INDEXED_EXPRESSION,
      LITERAL_EXPRESSION, METHOD_CALL_EXPRESSION, PARENTHESIZED_EXPRESSION, PROJECTION_EXPRESSION,
      REFERENCE_EXPRESSION, SELECTION_EXPRESSION, UNARY_EXPRESSION, VARIABLE_EXPRESSION),
  };

  /* ********************************************************** */
  // plusMinusOperations |
  //                            divideMultiplyOperations |
  //                            bitwiseBooleanOperations |
  //                            instanceOfOperation |
  //                            shiftOperations |
  //                            booleanOperations |
  //                            equalityOperations |
  //                            relationalOperations |
  //                            setOperations
  static boolean binaryOperations(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binaryOperations")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, null, "<operator>");
    r = plusMinusOperations(b, l + 1);
    if (!r) r = divideMultiplyOperations(b, l + 1);
    if (!r) r = bitwiseBooleanOperations(b, l + 1);
    if (!r) r = instanceOfOperation(b, l + 1);
    if (!r) r = shiftOperations(b, l + 1);
    if (!r) r = booleanOperations(b, l + 1);
    if (!r) r = equalityOperations(b, l + 1);
    if (!r) r = relationalOperations(b, l + 1);
    if (!r) r = setOperations(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // "|" | "^" | "&" | "band" | "bor" | "xor"
  static boolean bitwiseBooleanOperations(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitwiseBooleanOperations")) return false;
    boolean r;
    r = consumeToken(b, OR);
    if (!r) r = consumeToken(b, XOR);
    if (!r) r = consumeToken(b, AND);
    if (!r) r = consumeToken(b, BAND_KEYWORD);
    if (!r) r = consumeToken(b, BOR_KEYWORD);
    if (!r) r = consumeToken(b, XOR_KEYWORD);
    return r;
  }

  /* ********************************************************** */
  // '!' | '~'
  static boolean bitwiseOperations(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bitwiseOperations")) return false;
    if (!nextTokenIs(b, "", NEGATE, NOT)) return false;
    boolean r;
    r = consumeToken(b, NEGATE);
    if (!r) r = consumeToken(b, NOT);
    return r;
  }

  /* ********************************************************** */
  // TRUE_KEYWORD | FALSE_KEYWORD
  static boolean booleanLiteralExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "booleanLiteralExpression")) return false;
    if (!nextTokenIs(b, "", FALSE_KEYWORD, TRUE_KEYWORD)) return false;
    boolean r;
    r = consumeToken(b, TRUE_KEYWORD);
    if (!r) r = consumeToken(b, FALSE_KEYWORD);
    return r;
  }

  /* ********************************************************** */
  // "&&" | "||" |
  //                               "and" | "or" |
  //                               "not"
  static boolean booleanOperations(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "booleanOperations")) return false;
    boolean r;
    r = consumeToken(b, AND_AND);
    if (!r) r = consumeToken(b, OR_OR);
    if (!r) r = consumeToken(b, AND_KEYWORD);
    if (!r) r = consumeToken(b, OR_KEYWORD);
    if (!r) r = consumeToken(b, NOT_KEYWORD);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER ('.' IDENTIFIER)*
  static boolean classNameExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classNameExpression")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    r = r && classNameExpression_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ('.' IDENTIFIER)*
  private static boolean classNameExpression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classNameExpression_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!classNameExpression_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "classNameExpression_1", c)) break;
    }
    return true;
  }

  // '.' IDENTIFIER
  private static boolean classNameExpression_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classNameExpression_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, DOT, IDENTIFIER);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ':' expression
  static boolean conditionalExpressionTail(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditionalExpressionTail")) return false;
    if (!nextTokenIs(b, COLON)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, COLON);
    p = r; // pin = 1
    r = r && expression(b, l + 1, -1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // !('}' | ',')
  static boolean configRecover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "configRecover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !configRecover_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // '}' | ','
  private static boolean configRecover_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "configRecover_0")) return false;
    boolean r;
    r = consumeToken(b, RBRACE);
    if (!r) r = consumeToken(b, COMMA);
    return r;
  }

  /* ********************************************************** */
  // '*' | '/' | '%'
  static boolean divideMultiplyOperations(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "divideMultiplyOperations")) return false;
    boolean r;
    r = consumeToken(b, MULTIPLY);
    if (!r) r = consumeToken(b, DIVISION);
    if (!r) r = consumeToken(b, MODULO);
    return r;
  }

  /* ********************************************************** */
  // "==" | "!=" |
  //                                "eq" | "neq"
  static boolean equalityOperations(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "equalityOperations")) return false;
    boolean r;
    r = consumeToken(b, EQUAL);
    if (!r) r = consumeToken(b, NOT_EQUAL);
    if (!r) r = consumeToken(b, EQ_KEYWORD);
    if (!r) r = consumeToken(b, NEQ_KEYWORD);
    return r;
  }

  /* ********************************************************** */
  // "instanceof"
  static boolean instanceOfOperation(PsiBuilder b, int l) {
    return consumeToken(b, INSTANCEOF_KEYWORD);
  }

  /* ********************************************************** */
  // 'javaType' '=' classNameExpression
  public static boolean javaTypeConfig(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "javaTypeConfig")) return false;
    if (!nextTokenIs(b, JAVA_TYPE_KEYWORD)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, JAVA_TYPE_CONFIG, null);
    r = consumeTokens(b, 1, JAVA_TYPE_KEYWORD, EQ);
    p = r; // pin = 1
    r = r && classNameExpression(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // 'jdbcType' '=' IDENTIFIER
  public static boolean jdbcTypeConfig(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "jdbcTypeConfig")) return false;
    if (!nextTokenIs(b, JDBC_TYPE_KEYWORD)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, JDBC_TYPE_CONFIG, null);
    r = consumeTokens(b, 1, JDBC_TYPE_KEYWORD, EQ, IDENTIFIER);
    p = r; // pin = 1
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // 'jdbcTypeName' '=' IDENTIFIER
  public static boolean jdbcTypeNameConfig(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "jdbcTypeNameConfig")) return false;
    if (!nextTokenIs(b, JDBC_TYPE_KEYWORD_NAME)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, JDBC_TYPE_NAME_CONFIG, null);
    r = consumeTokens(b, 1, JDBC_TYPE_KEYWORD_NAME, EQ, IDENTIFIER);
    p = r; // pin = 1
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // 'mode' '=' IDENTIFIER
  public static boolean modeConfig(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "modeConfig")) return false;
    if (!nextTokenIs(b, MODE_KEYWORD)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, MODE_CONFIG, null);
    r = consumeTokens(b, 1, MODE_KEYWORD, EQ, IDENTIFIER);
    p = r; // pin = 1
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // INTEGER_LITERAL | DOUBLE_LITERAL
  static boolean numberLiteralExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "numberLiteralExpression")) return false;
    if (!nextTokenIs(b, "", DOUBLE_LITERAL, INTEGER_LITERAL)) return false;
    boolean r;
    r = consumeToken(b, INTEGER_LITERAL);
    if (!r) r = consumeToken(b, DOUBLE_LITERAL);
    return r;
  }

  /* ********************************************************** */
  // 'numericScale' '=' INTEGER_LITERAL
  public static boolean numericScaleConfig(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "numericScaleConfig")) return false;
    if (!nextTokenIs(b, NUMERIC_SCALE_KEYWORD)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, NUMERIC_SCALE_CONFIG, null);
    r = consumeTokens(b, 1, NUMERIC_SCALE_KEYWORD, EQ, INTEGER_LITERAL);
    p = r; // pin = 1
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // ',' (modeConfig | javaTypeConfig | jdbcTypeConfig | jdbcTypeNameConfig | numericScaleConfig | typeHandlerConfig | resultMapConfig)
  static boolean paramConfig(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "paramConfig")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, COMMA);
    p = r; // pin = 1
    r = r && paramConfig_1(b, l + 1);
    exit_section_(b, l, m, r, p, MblParser::configRecover);
    return r || p;
  }

  // modeConfig | javaTypeConfig | jdbcTypeConfig | jdbcTypeNameConfig | numericScaleConfig | typeHandlerConfig | resultMapConfig
  private static boolean paramConfig_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "paramConfig_1")) return false;
    boolean r;
    r = modeConfig(b, l + 1);
    if (!r) r = javaTypeConfig(b, l + 1);
    if (!r) r = jdbcTypeConfig(b, l + 1);
    if (!r) r = jdbcTypeNameConfig(b, l + 1);
    if (!r) r = numericScaleConfig(b, l + 1);
    if (!r) r = typeHandlerConfig(b, l + 1);
    if (!r) r = resultMapConfig(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // paramConfig+
  public static boolean paramConfigList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "paramConfigList")) return false;
    if (!nextTokenIs(b, COMMA)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = paramConfig(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!paramConfig(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "paramConfigList", c)) break;
    }
    exit_section_(b, m, PARAM_CONFIG_LIST, r);
    return r;
  }

  /* ********************************************************** */
  // expression? (',' expression)*
  public static boolean parameterList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "parameterList")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, PARAMETER_LIST, "<parameter list>");
    r = parameterList_0(b, l + 1);
    r = r && parameterList_1(b, l + 1);
    exit_section_(b, l, m, r, false, MblParser::parameterRecover);
    return r;
  }

  // expression?
  private static boolean parameterList_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "parameterList_0")) return false;
    expression(b, l + 1, -1);
    return true;
  }

  // (',' expression)*
  private static boolean parameterList_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "parameterList_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!parameterList_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "parameterList_1", c)) break;
    }
    return true;
  }

  // ',' expression
  private static boolean parameterList_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "parameterList_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && expression(b, l + 1, -1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // !(')')
  static boolean parameterRecover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "parameterRecover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !consumeToken(b, RPARENTH);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '+' | '-'
  static boolean plusMinusOperations(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "plusMinusOperations")) return false;
    if (!nextTokenIs(b, "", MINUS, PLUS)) return false;
    boolean r;
    r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, MINUS);
    return r;
  }

  /* ********************************************************** */
  // '{' expression '}'
  public static boolean projectionExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "projectionExpression")) return false;
    if (!nextTokenIs(b, LBRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACE);
    r = r && expression(b, l + 1, -1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, PROJECTION_EXPRESSION, r);
    return r;
  }

  /* ********************************************************** */
  // !('}' | ',' | '(' | ')' | binaryOperations)
  static boolean referenceRecover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "referenceRecover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !referenceRecover_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // '}' | ',' | '(' | ')' | binaryOperations
  private static boolean referenceRecover_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "referenceRecover_0")) return false;
    boolean r;
    r = consumeToken(b, RBRACE);
    if (!r) r = consumeToken(b, COMMA);
    if (!r) r = consumeToken(b, LPARENTH);
    if (!r) r = consumeToken(b, RPARENTH);
    if (!r) r = binaryOperations(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // '<'  | "<="  | '>'  | ">=" |
  //                                  "lt" | "lte" | "gt" | "gte"
  static boolean relationalOperations(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "relationalOperations")) return false;
    boolean r;
    r = consumeToken(b, LESS);
    if (!r) r = consumeToken(b, LESS_EQUAL);
    if (!r) r = consumeToken(b, GREATER);
    if (!r) r = consumeToken(b, GREATER_EQUAL);
    if (!r) r = consumeToken(b, LT_KEYWORD);
    if (!r) r = consumeToken(b, LT_EQ_KEYWORD);
    if (!r) r = consumeToken(b, GT_KEYWORD);
    if (!r) r = consumeToken(b, GT_EQ_KEYWORD);
    return r;
  }

  /* ********************************************************** */
  // 'resultMap' '=' IDENTIFIER
  public static boolean resultMapConfig(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "resultMapConfig")) return false;
    if (!nextTokenIs(b, RESULT_MAP_KEYWORD)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, RESULT_MAP_CONFIG, null);
    r = consumeTokens(b, 1, RESULT_MAP_KEYWORD, EQ, IDENTIFIER);
    p = r; // pin = 1
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // EXPRESSION_START rootElement RBRACE
  static boolean root(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "root")) return false;
    if (!nextTokenIs(b, EXPRESSION_START)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, EXPRESSION_START);
    p = r; // pin = 1
    r = r && report_error_(b, rootElement(b, l + 1));
    r = p && consumeToken(b, RBRACE) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // expression paramConfigList?
  static boolean rootElement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "rootElement")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_);
    r = expression(b, l + 1, -1);
    r = r && rootElement_1(b, l + 1);
    exit_section_(b, l, m, r, false, MblParser::rootRecover);
    return r;
  }

  // paramConfigList?
  private static boolean rootElement_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "rootElement_1")) return false;
    paramConfigList(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // !(RBRACE)
  static boolean rootRecover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "rootRecover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !consumeToken(b, RBRACE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '{' ('?' | '^' | '$') expression '}'
  public static boolean selectionExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "selectionExpression")) return false;
    if (!nextTokenIs(b, LBRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACE);
    r = r && selectionExpression_1(b, l + 1);
    r = r && expression(b, l + 1, -1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, SELECTION_EXPRESSION, r);
    return r;
  }

  // '?' | '^' | '$'
  private static boolean selectionExpression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "selectionExpression_1")) return false;
    boolean r;
    r = consumeToken(b, QUESTION);
    if (!r) r = consumeToken(b, XOR);
    if (!r) r = consumeToken(b, DOLLAR_KEYWORD);
    return r;
  }

  /* ********************************************************** */
  // "not in" | "in"
  static boolean setOperations(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "setOperations")) return false;
    if (!nextTokenIs(b, "", IN_KEYWORD, NOT_IN_KEYWORD)) return false;
    boolean r;
    r = consumeToken(b, NOT_IN_KEYWORD);
    if (!r) r = consumeToken(b, IN_KEYWORD);
    return r;
  }

  /* ********************************************************** */
  // "<<" | ">>" | ">>>" |
  //                             "shl" | "shr" | "ushr"
  static boolean shiftOperations(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "shiftOperations")) return false;
    boolean r;
    r = consumeToken(b, SHIFT_LEFT);
    if (!r) r = consumeToken(b, SHIFT_RIGHT);
    if (!r) r = consumeToken(b, SHIFT_RIGHT_LOGICAL);
    if (!r) r = consumeToken(b, SHIFT_LEFT_KEYWORD);
    if (!r) r = consumeToken(b, SHIFT_RIGHT_KEYWORD);
    if (!r) r = consumeToken(b, SHIFT_RIGHT_LOGICAL_KEYWORD);
    return r;
  }

  /* ********************************************************** */
  // STRING_LITERAL | CHARACTER_LITERAL
  static boolean textLiteralExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "textLiteralExpression")) return false;
    if (!nextTokenIs(b, "", CHARACTER_LITERAL, STRING_LITERAL)) return false;
    boolean r;
    r = consumeToken(b, STRING_LITERAL);
    if (!r) r = consumeToken(b, CHARACTER_LITERAL);
    return r;
  }

  /* ********************************************************** */
  // 'typeHandler' '=' classNameExpression
  public static boolean typeHandlerConfig(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "typeHandlerConfig")) return false;
    if (!nextTokenIs(b, TYPE_HANDLER_KEYWORD)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, TYPE_HANDLER_CONFIG, null);
    r = consumeTokens(b, 1, TYPE_HANDLER_KEYWORD, EQ);
    p = r; // pin = 1
    r = r && classNameExpression(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // bitwiseOperations |
  //                           '+' | '-' | 'not'
  static boolean unaryOperator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "unaryOperator")) return false;
    boolean r;
    r = bitwiseOperations(b, l + 1);
    if (!r) r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, MINUS);
    if (!r) r = consumeToken(b, NOT_KEYWORD);
    return r;
  }
